--- a/{{cookiecutter.project_slug}}/utils/detail_wrapper/templates/detail.html
+++ b/{{cookiecutter.project_slug}}/utils/detail_wrapper/templates/detail.html
@@ -1,55 +1,2 @@
-{% load martortags %}
-{% load guardian_tags %}
-{% get_obj_perms request.user for object as "user_perms" %}
-<div class="container">
-  <div class="section">
-    <div class="row">
-      <div class="col-sm-10">
-        <h4>
-          Details
-        </h4>
-      </div>
-      <div class="col-sm-2 text-right">
-        {% if request.user.is_superuser or object.created_by == request.user %}
-        {% if update_object_link %}
-        <a href="{{update_object_link}}"><i class="notika-icon notika-edit"></i></a>
-        {% else %}
-        <a href="{{object.get_absolute_url}}edit"><i class="notika-icon notika-edit"></i></a>
-        {% endif %}
-        {% endif %}
-      </div>
-      {% for k,v in fields.items %}
-      <div class="col-sm-2">
-        {{k.capitalize}}
-      </div>
-      <div class="col-sm-10">
-        {% if v.get_absolute_url %}
-        <a href="{{v.get_absolute_url}}">
-          <i>
-            {{v}}
-          </i>
-        </a>
-        {% elif v.foreground and v.background %}
-        <div>
-          <span class="label" style="background-color:{{v.background}}; color:{{v.foreground}};">{{v}}
-          </span>
-        </div>
-        {% elif v.count > 0 %}
-        <ul>
-          {% for item in v.all %}
-          <li>{{item}}</li>
-          {% endfor %}
-        </ul>
-        {% elif k == 'content' %}
-        <div class="my-3 p-3 nk-gray">
-          {{ v | safe_markdown }}
-        </div>
-        {% else %}
-        {{ v }}
-        {% endif %}
-      </div>
-      {% endfor %}
-    </div>
-
-  </div>
-</div>
+{% load detail_tags %}
+{% detail fields %}
