enclosed in raw tags

--- a/{{cookiecutter.project_slug}}/utils/detail_wrapper/templates/detail.html
+++ b/{{cookiecutter.project_slug}}/utils/detail_wrapper/templates/detail.html
@@ -1,2 +1,5 @@
-{% raw %}{% load detail_tags {% endraw %}
+{% raw %}{% load detail_tags %}
+{% if fields %}
 {% detail fields %}
+{% endif %}
+{% endraw %}
