--- a/{{cookiecutter.project_slug}}/utils/detail_wrapper/templates/form.html
+++ b/{{cookiecutter.project_slug}}/utils/detail_wrapper/templates/form.html
@@ -12,6 +12,7 @@
     {%else %}
     <a href="{{object.get_absolute_url}}" class="btn btn-primary"></a>
     {% endif %}
+    {% endif %}
   </div>
   {% for k,v in fields.items %}
   <div class="col-sm-2">
