--- a/{{cookiecutter.project_slug}}/utils/detail_wrapper/templates/form.html
+++ b/{{cookiecutter.project_slug}}/utils/detail_wrapper/templates/form.html
@@ -1,3 +1,4 @@
+{% raw %}
 <!--Adjust template according to your needs-->
 <div class="row">
   <div class="col-sm-10">
@@ -42,3 +43,4 @@
   </div>
   {% endfor %}
 </div>
+{% endraw %}
