--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/tables/action_column.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/tables/action_column.html
@@ -1,3 +1,4 @@
+{% raw %}
 <div class="text-center">
   <a
     class="nav-link dropdown-toggle"
@@ -12,5 +13,7 @@
   <div class="dropdown-menu" aria-labelledby="actionDropdown">
     <a class="dropdown-item" href="{{record.get_absolute_url}}">View</a>
     <a class="dropdown-item" href="{{record.get_update_url}}">Update</a>
+    <a class="dropdown-item disabled" href="{{record.get_delete_url}}">Delete</a>
   </div>
 </div>
+{% endraw %}
