--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/detail.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/detail.html
@@ -1,11 +1,22 @@
 {% raw %}
 {% extends 'base.html' %}
+{% load detail_tags %}
 
 {% block content %}
+
+{% if fields %}
+{% detail fields %}
+{% endif %}
+
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalDelete">
+<div>
+<a class="btn btn-warning me-3" href={{object.get_update_url}}>
+  Update
+</a>
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalDelete">
   Delete
 </button>
+</div>
 {% endblock %}
 
 {% block modal %}
