--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/list.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/list.html
@@ -1,3 +1,37 @@
 {% raw %}
 {% extends 'base.html' %}
+
+{% block content %}
+
+<div class="table-responsive">
+<table
+    id="table"
+    width="100%"
+    class="table table-bordered dt-responsive nowrap"
+></table>
+</div>
+
+{% include 'tables/checkbox.html' %}
+
+<script language="javascript">
+  $(document).ready(function () {
+    AjaxDatatableViewUtils.initialize_table(
+      $("#table"),
+      "{{request.get_full_path}}/ajax/list",
+      {
+        // extra_options (example)
+        processing: false,
+        autoWidth: false,
+        full_row_select: false,
+        scrollX: false,
+      },
+      {
+        // extra_data
+        // ...
+      }
+    );
+  });
+</script>
+
+{% endblock %}
 {% endraw %}
