added filter_qs in ajax

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/list.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/list.html
@@ -24,8 +24,7 @@
         scrollX: false,
       },
       {
-        // extra_data
-        // ...
+        forward: {{request.GET.urlencode}}
       }
     );
   });
