--- a/{{cookiecutter.project_slug}}/utils/hijack_wrapper/templates/list.html
+++ b/{{cookiecutter.project_slug}}/utils/hijack_wrapper/templates/list.html
@@ -7,7 +7,7 @@
     data-toggle="dropdown"
   >
     Login as<span class="caret"></span>
-  </button
+</button>
   <ul class="dropdown-menu">
     {% for user in users %}
     <li class="dropdown-item">
