fix in list.html

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/list.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/list.html
@@ -24,7 +24,9 @@
         scrollX: false,
       },
       {
-        forward: {{request.GET.urlencode}}
+        {% if request.GET.urlencode %}
+        forward: {{request.GET.urlencode}},
+        {% endif %}
       }
     );
   });
