fixed some templates and fields

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/detail.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 {% if fields %}
-{% detail fields %}
+{% render_detail fields %}
 {% endif %}
 
 <!-- Button trigger modal -->
