--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/list.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/list.html
@@ -15,7 +15,7 @@
   $(document).ready(function () {
     AjaxDatatableViewUtils.initialize_table(
       $("#table"),
-      "{{request.get_full_path}}/ajax/list",
+      "{{request.get_full_path}}ajax/list/",
       {
         // extra_options (example)
         processing: false,
