--- a/{{cookiecutter.project_slug}}/base/templates/partials/public/navbar.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/public/navbar.html
@@ -5,7 +5,6 @@
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
         <a class="navbar-brand brand-logo" href="{% url 'home' %}">
           <img src="{% static 'logos/logo_maroon.png' %}" alt="logo" />
-          <span class="font-10 d-block font-weight-light mt-1">Scholarship Kit Information Portal</span>
         </a>
         <a class="navbar-brand brand-logo-mini" href="{% url 'home' %}"><img
             src="{% static 'logos/icon_transparent.png' %}" alt="logo" /></a>
@@ -29,7 +28,6 @@
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link" id="profileDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
               <div class="nav-profile-text">
-                {% comment %} #TODO {% endcomment %}
                 <p class="text-black font-weight-semibold m-0">
                   Welcome back, {{request.user.username}}!
                   <i class="mdi mdi-chevron-down"></i>
@@ -38,16 +36,13 @@
             </a>
             <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
               <a class="dropdown-item" href="{% url 'dashboard' %}">
-                {% comment %} #TODO logout url{% endcomment %}
                 <i class="mdi mdi-view-quilt me-2 text-success" title="Go back to dashboard"></i>
                 Dashboard
               </a>
-              <a class="dropdown-item" href="#">
-                {% comment %} #TODO logout url{% endcomment %}
+              <a href="{% url 'notifications:all' %}">
                 <i class="mdi mdi-bell me-2 text-success"></i> Notifications
               </a>
               <div class="dropdown-divider"></div>
-              {% comment %} #TODO logout url{% endcomment %}
               <a class="dropdown-item" href="{% url 'account_logout' %}">
                 <i class="mdi mdi-logout me-2 text-primary"></i> Logout
               </a>
@@ -71,29 +66,19 @@
     <div class="container">
       <ul class="nav page-navigation">
         <li class="nav-item">
-          {% comment %} #TODO url {% endcomment %}
-          <a class="nav-link" href="{% url 'posts:list' %}">
+          <a class="nav-link" href="#">
             <i class="mdi mdi-bullhorn menu-icon"></i>
             <span class="menu-title">Announcements</span>
           </a>
         </li>
-        {% comment %} #TODO url {% endcomment %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'posts:scholarship_list' %}">
-            <i class="mdi mdi-star menu-icon"></i>
-            <span class="menu-title">Scholarships</span>
-          </a>
-        </li>
-        {% comment %} #TODO url {% endcomment %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">
             <i class="mdi mdi-information-outline menu-icon"></i>
             <span class="menu-title">About Us</span>
           </a>
         </li>
-        {% comment %} #TODO url {% endcomment %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'contact' %}">
+          <a class="nav-link" href="#">
             <i class="mdi mdi-contact-mail menu-icon"></i>
             <span class="menu-title">Contact Us</span>
           </a>
