--- a/{{cookiecutter.project_slug}}/base/templates/pages/public/detail.html
+++ b/{{cookiecutter.project_slug}}/base/templates/pages/public/detail.html
@@ -2,7 +2,7 @@
 {% load detail_tags %}
 
 {% block content %}
-<div class="row">
-  {% render_detail %}
+<div class="mx-3">
+{% render_detail %}
 </div>
 {% endblock %}
