--- a/{{cookiecutter.project_slug}}/base/templates/partials/admin/sidebar/base.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/admin/sidebar/base.html
@@ -52,9 +52,9 @@
         <span class="nav-item-head">Settings</span>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'posts:blog_list' %}">
+        <a class="nav-link" href="{% url 'posts:managed_list' %}">
           <i class="mdi mdi-newspaper menu-icon"></i>
-          <span class="menu-title">Announcement Posts</span>
+          <span class="menu-title">Posts</span>
         </a>
       </li>
       <li class="nav-item">
