--- a/{{cookiecutter.project_slug}}/base/templates/partials/public/navbar.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/public/navbar.html
@@ -42,7 +42,7 @@
                 <i class="mdi mdi-view-quilt me-2 text-success" title="Go back to dashboard"></i>
                 Dashboard
               </a>
-              <a href="{% url 'notifications:all' %}">
+              <a class="dropdown-item" href="{% url 'notifications:all' %}">
                 {% comment %} #TODO logout url{% endcomment %}
                 <i class="mdi mdi-bell me-2 text-success"></i> Notifications
               </a>
