--- a/{{cookiecutter.project_slug}}/base/templates/pages/about.html
+++ b/{{cookiecutter.project_slug}}/base/templates/pages/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-  <div class="card p-0">
+  <div class="card p-0 mb-3">
     <div class="card-header p-3 bg-warning bg-opacity-50">
       <div class="d-flex justify-content-between">
         <div class="card-title align-self-center mb-0">
