--- a/{{cookiecutter.project_slug}}/base/templates/account/login.html
+++ b/{{cookiecutter.project_slug}}/base/templates/account/login.html
@@ -54,7 +54,7 @@
                      href="{% url 'user_registration:create' %}">Apply for an account</a>
                 {% endif %}
                 {% get_settings_value 'ACCOUNT_ALLOW_REGISTRATION' as account_allow_registration %}
-                {% if account_allow_registration %}
+                {% elif account_allow_registration %}
                   <a class="button secondaryAction ms-3" href="{% url 'account_signup' %}">Register</a>
                 {% endif %}
                 <button class="primaryAction btn btn-primary" type="submit">{% translate "Sign In" %}</button>
