--- a/{{cookiecutter.project_slug}}/base/templates/partials/common/form.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/common/form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="card p-0">
-  <div class="card-header p-3 bg-warning bg-opacity-50">
+  <div class="card-header p-3 bg-primary bg-opacity-50">
     <div class="d-flex justify-content-between px-2">
       <div class="card-title align-self-center mb-0">{{form_header}}</div>
       {% if show_action_buttons %}
