--- a/{{cookiecutter.project_slug}}/base/templates/pages/admin/detail.html
+++ b/{{cookiecutter.project_slug}}/base/templates/pages/admin/detail.html
@@ -1,8 +1,5 @@
 {% extends 'partials/admin/base.html' %}
-{% load detail_tags %}
 
 {% block content %}
-<div class="row grid-margin">
-  {% render_detail %}
-</div>
+{{object.as_card | safe}}
 {% endblock %}
