--- a/{{cookiecutter.project_slug}}/base/templates/partials/common/css.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/common/css.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="{% static 'vendors/css/vendor.bundle.base.css' %}">
 <link rel="stylesheet" href="{% static 'vendors/jquery-bar-rating/css-stars.css' %}">
 <link rel="stylesheet" href="{% static 'vendors/font-awesome/css/font-awesome.min.css' %}">
+<link rel="stylesheet" href="{% static 'vendors/datatables/datatables.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
 <!-- AjaxDatatable-->
