--- a/{{cookiecutter.project_slug}}/base/templates/partials/common/css.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/common/css.html
@@ -17,6 +17,7 @@
 
 <!-- Formset -->
 <link href="{% static 'formset/css/bootstrap5-extra.css' %}" rel="stylesheet">
+<link href="{% static 'formset/css/collections.css' %}" rel="stylesheet">
 {% endcompress %}
 
 {% block partial_css %}
