--- a/{{cookiecutter.project_slug}}/base/templates/partials/public/navbar.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/public/navbar.html
@@ -1,4 +1,4 @@
-{% load static %} {% load hijack_tags %}
+{% load static %}
 <div class="horizontal-menu">
   <nav class="navbar top-navbar col-lg-12 col-12 p-0">
     <div class="container">
@@ -53,7 +53,7 @@
               </a>
             </div>
           </li>
-          {% render_hijacks %}
+          {% include 'partials/common/hijack.html' %}
           {% else %}
           <li class="nav-item nav-profile dropdown">
             <a class="btn btn-lg btn-primary" href="{% url 'account_login' %}">Login</a>
