--- a/{{cookiecutter.project_slug}}/base/templates/partials/common/css.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/common/css.html
@@ -8,16 +8,18 @@
 <link rel="stylesheet" href="{% static 'vendors/css/vendor.bundle.base.css' %}">
 <link rel="stylesheet" href="{% static 'vendors/jquery-bar-rating/css-stars.css' %}">
 <link rel="stylesheet" href="{% static 'vendors/font-awesome/css/font-awesome.min.css' %}">
-<link rel="stylesheet" href="{% static 'vendors/datatables/datatables.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
 <!-- AjaxDatatable-->
 <link href="{% static 'ajax_datatable/css/style.css' %}" rel="stylesheet" />
 <link href="//cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" />
+<link href="//cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css" />
+<link href="//cdn.datatables.net/select/1.7.0/css/select.dataTables.min.css"/>
+<link href="//cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css"/>
+<link href="//cdn.datatables.net/buttons/2.4.2/css/buttons.bootstrap5.min.css"/>
 
 <!-- Formset -->
 <link href="{% static 'formset/css/bootstrap5-extra.css' %}" rel="stylesheet">
-<link href="{% static 'formset/css/collections.css' %}" rel="stylesheet">
 {% endcompress %}
 
 {% block partial_css %}
