--- a/{{cookiecutter.project_slug}}/base/templates/partials/common/js.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/common/js.html
@@ -14,7 +14,6 @@
 <script src="{% static 'vendors/flot/jquery.flot.categories.js' %}"></script>
 <script src="{% static 'vendors/flot/jquery.flot.fillbetween.js' %}"></script>
 <script src="{% static 'vendors/flot/jquery.flot.stack.js' %}"></script>
-<script src="{% static 'vendors/datatables/datatables.min.js' %}"></script>
 <script src="{% static 'js/jquery.cookie.js' %}" type="text/javascript"></script>
 <!-- End plugin js for this page -->
 <!-- inject:js -->
@@ -27,20 +26,27 @@
 <!-- place project specific Javascript in this file -->
 <script defer src="{% static 'js/project.js' %}"></script>
 
+<!-- Datatables -->
+<script type="text/javascript" src="{% static 'ajax_datatable/js/utils.js' %}"></script>
+
 <!-- Datepicker -->
 <script src="{% static 'js/datapicker/bootstrap-datepicker.js' %}"></script>
 <script src="{% static 'js/datapicker/datepicker-active.js' %}"></script>
+
+
+<!-- Jquery -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+<!-- Datatables -->
+<script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+<script src="//cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+<script src="//cdn.datatables.net/buttons/2.4.2/js/buttons.bootstrap5.min.js"></script>
+<script src="//cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
+<script src="//cdn.datatables.net/select/1.7.0/js/dataTables.select.min.js"></script>
+
 {% block partial_js %}
 {% endblock %}
 
 {% endcompress %}
-
-<!-- Datatables -->
-<script type="text/javascript" src="{% static 'ajax_datatable/js/utils.js' %}"></script>
 <!-- Formset-->
 <script type="module" src="{% static 'formset/js/django-formset.js' %}"></script>
-
-<!-- Jquery -->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<!-- Datatables -->
-<script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
