--- a/{{cookiecutter.project_slug}}/base/templates/partials/common/form.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/common/form.html
@@ -26,7 +26,7 @@
           {% if form_collection %}
             {{ form_collection }}
           {% elif form %}
-            {% render_form form "bootstrap" field_classes="pb-3 mb-2" %}
+            {% render_form form "bootstrap" %}
           {% endif %}
           {% block form_collection_buttons %}
           <div class="d-flex align-items-center justify-content-md-end">
