added notification_management and django security

--- a/{{cookiecutter.project_slug}}/base/templates/partials/admin/base.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/admin/base.html
@@ -67,6 +67,9 @@
     </div>
     {% include 'partials/admin/js.html' %}
     {% block extra_js %}{% endblock %}
+
+    {% include 'session_security/all.html' %}
+
     <script>
         $(document).ready(function() {
             $('#sidebar-search').on('input', function() {
