--- a/{{cookiecutter.project_slug}}/base/templates/partials/public/base.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/public/base.html
@@ -33,5 +33,6 @@
       </div>
       {% include 'partials/public/js.html' %}
       {% block extra_js %}{% endblock %}
+      {% include 'session_security/all.html' %}
     </body>
   </html>
