--- a/{{cookiecutter.project_slug}}/base/templates/partials/public/navbar.html
+++ b/{{cookiecutter.project_slug}}/base/templates/partials/public/navbar.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load account socialaccount %}
+{% load user_agents %}
 <div class="horizontal-menu">
   <nav class="navbar top-navbar col-lg-12 col-12 p-0">
     <div class="container">
